# cobweb

./: .gitignore  cobweb.cabal
benchmark/: Bench.hs
benchmark/Bench/: Sum.hs  SumMap.hs
inspection/: Main.hs
src/: Cobweb.hs
src/Cobweb/: Consumer.hs  Core.hs  Duplex.hs  Fold.hs  Fuse.hs  Group.hs  Internal.hs  Link.hs  List.hs  Merge.hs  Pipe.hs  Producer.hs  Resource.hs  Trans.hs  Tutorial.hs  Unzip.hs  Zip.hs
src/Cobweb/Internal/: Cat.hs
src/Cobweb/Type/: Combinators.hs  Lemmata.hs
src/Data/Functor/: HSum.hs
test/: Main.hs
