name:                cobweb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cobweb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmissing-import-lists
                       -Widentities
  exposed-modules:     Cobweb
                     , Cobweb.Type.Combinators
                     , Cobweb.Type.Lemmata
                     , Cobweb.Internal
                     , Cobweb.Core
                     , Cobweb.Producer
                     , Cobweb.Consumer
                     , Cobweb.Fold
                     , Cobweb.Pipe
                     , Cobweb.Link
                     , Cobweb.Fuse
                     , Cobweb.Zip
                     , Cobweb.Unzip
                     , Cobweb.Group
                     , Cobweb.Trans
                     , Cobweb.Duplex
                     , Cobweb.Resource
                     , Cobweb.List
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , mmorph
                     , type-combinators
                     , transformers-base
                     , exceptions
                     , resourcet
                     , primitive
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cobweb
